updated greetings, aboutme, tools, skills

--- a/public/index.html
+++ b/public/index.html
@@ -23,28 +23,28 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.13.0/css/all.min.css">
 
     <!-- Primary Meta Tags -->
-    <title>Lázaro Estrada - Full Stack Developer</title>
-    <meta name="title" content="Lázaro Estrada - Full Stack Developer">
-    <meta name="description" content="A professional software developer with +4 years of IT experiences working with patterns and best practices, trained to develop web and mobile applications with end-user experience, teamwork abilities, proactive, self-motivation, quick learning, sound reasoning, and problem-solving skills.">
-    <meta name="keywords" content="lazaro estrada, Lázaro Estrada, lazaromer97, lazaroestrada">
+    <title>Megalatha S - Lead UX Designer</title>
+    <meta name="title" content="Megalatha S - Lead UX Designer">
+    <meta name="description" content="I'm a User Experience Designer and Interaction Designer based in Bangalore, India with experience in delivering user-centric Interfaces for surface UIs. I'm passionate about rendering intuitive UIs for people and thereby enrich the overall customer experience.">
+    <meta name="keywords" content="megalatha, megalathas, megalatha s, megalatha shankariah, ux, ux designer, ux researcher, designer">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="revisit-after" content="1 days">
-    <meta name="author" content="Lázaro Estrada">
+    <meta name="author" content="Megalatha S">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://lazaroestrada.com/">
-    <meta property="og:title" content="Lázaro Estrada - Full Stack Developer">
-    <meta property="og:description" content="A professional software developer with +4 years of IT experiences working with patterns and best practices, trained to develop web and mobile applications with end-user experience, teamwork abilities, proactive, self-motivation, quick learning, sound reasoning, and problem-solving skills.">
+    <meta property="og:url" content="https://uxnd.in/">
+    <meta property="og:title" content="Megalatha S - Lead UX Designer">
+    <meta property="og:description" content="I'm a User Experience Designer and Interaction Designer based in Bangalore, India with experience in delivering user-centric Interfaces for surface UIs. I'm passionate about rendering intuitive UIs for people and thereby enrich the overall customer experience.">
     <meta property="og:image" content="%PUBLIC_URL%/bg.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://lazaroestrada.com/">
-    <meta property="twitter:title" content="Lázaro Estrada - Full Stack Developer">
-    <meta property="twitter:description" content="A professional software developer with +4 years of IT experiences working with patterns and best practices, trained to develop web and mobile applications with end-user experience, teamwork abilities, proactive, self-motivation, quick learning, sound reasoning, and problem-solving skills.">
+    <meta property="twitter:url" content="https://uxnd.in/">
+    <meta property="twitter:title" content="Megalatha S - Lead UX Designer">
+    <meta property="twitter:description" content="I'm a User Experience Designer and Interaction Designer based in Bangalore, India with experience in delivering user-centric Interfaces for surface UIs. I'm passionate about rendering intuitive UIs for people and thereby enrich the overall customer experience.">
     <meta property="twitter:image" content="%PUBLIC_URL%/bg.jpg">
 
   </head>
