work projected list

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <title>Megalatha S - Lead UX Designer</title>
     <meta name="title" content="Megalatha S - Lead UX Designer">
     <meta name="description" content="I'm a User Experience Designer and Interaction Designer based in Bangalore, India with experience in delivering user-centric Interfaces for surface UIs. I'm passionate about rendering intuitive UIs for people and thereby enrich the overall customer experience.">
-    <meta name="keywords" content="megalatha, megalathas, megalatha s, megalatha shankariah, ux, ux designer, ux researcher, designer">
+    <meta name="keywords" content="megalatha, megalathas, megalatha s, megalatha shankariah, ux, ux designer, ux researcher, designer, bangalore ux designer, uxd bangalore, ui/ux bangalore, interaction designer bangalore, ixd bangalore, interaction designer portfolio, ux designer portfolio, ux designer philips, ux designer signify, interaction designer signify, best ux designer portfolio, best interaction designer portfolio, best uxd portfolio, top 10 ux designer portfolio, top 10 ixd designer portfolio, top 10 interaction designer portfolio">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
