update my leadership outlook

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -52,7 +52,7 @@
               consumer, enterprise, and B2B environments. Through my work, I have
               made a positive impact on the lives of both team members and users
               within esteemed organizations such as <strong>Target, Philips, Amadeus,
-              Fourkites </strong>, and many others.
+                Fourkites </strong>, and many others.
             </p>
             <p class="specializing-in-ux">&nbsp;</p>
             <p class="specializing-in-ux">&nbsp;</p>
@@ -90,52 +90,42 @@
           <div class="yrs4">5 yrs</div>
           <div class="the-traditional-image-container">
             <p class="specializing-in-ux">
-              The traditional image of a boss yelling instructions at their team is
-              widely recognized as ineffective and unhelpful in terms of leadership.
-              However, I hold the belief that the alternative image of a leader
-              constantly working alongside their team is equally flawed. I have
-              observed numerous leaders attempting to showcase their own expertise
-              by taking on the role of the team lead in addition to their managerial
-              responsibilities. Unfortunately, this mindset often leads to a host of
-              issues, including inefficiency and high turnover rates.
+              The traditional image of a boss yelling instructions at their team is widely recognized as ineffective and
+              unhelpful in terms of leadership. However, I hold the belief that the alternative image of a leader
+              constantly working alongside their team is equally flawed. I have observed numerous leaders attempting to
+              showcase their own expertise by taking on the role of the team lead in addition to their managerial
+              responsibilities. Unfortunately, this mindset often leads to a host of issues, including inefficiency and
+              high turnover rates.
             </p>
             <p class="specializing-in-ux">&nbsp;</p>
             <p class="specializing-in-ux">
-              Instead, I prefer to envision a leader as someone who constructs and
-              supports a bridge for their team. Their role is to inspire, provide a
-              clear vision, establish connections, and remove obstacles. Most
-              importantly, they enable their team members to perform their best
-              work. However, it is essential to recognize that the responsibility
-              for carrying out the work rests with the team, not solely with the
-              manager. Exceptional leaders understand the significance of granting
-              autonomy while simultaneously enforcing accountability, as this
-              approach distinguishes them as great leaders.
+              Instead, I prefer to relate myself as a leader who constructs and supports a bridge for my team. I inspire
+              and provide a clear vision, establish connections, and remove obstacles. Most importantly, I enable my
+              team members to perform my best work. However, it is essential to recognize that the responsibility for
+              carrying out the work rests with the team, not solely with the manager. I understand the significance of
+              granting autonomy while simultaneously enforcing accountability with my team.
             </p>
             <p class="specializing-in-ux">&nbsp;</p>
             <p class="specializing-in-ux">
-              In my experience, I have discovered that creating and sustaining
-              winning teams is best achieved through transparency, accountability,
-              teamwork, and a sense of ownership. To assemble such teams, I
-              meticulously hire exceptional individuals who possess the necessary
-              skills and background to solve problems. I equip them with the tools,
-              guidance, and training required for success and then give them the
-              autonomy to flourish.
+              In my experience, I have discovered that creating and sustaining winning teams is best achieved through
+              transparency, accountability, teamwork, and a sense of ownership. To assemble such teams, I meticulously
+              hire exceptional individuals who possess the necessary skills and background to solve problems. I equip
+              them with the tools, guidance, and training required for success and then give them the autonomy to
+              flourish.
             </p>
             <p class="specializing-in-ux">&nbsp;</p>
             <p class="specializing-in-ux">
-              Once the team is in place, my role becomes that of a navigator,
-              providing clear direction by defining objectives and key results. I
-              allow the team the flexibility to determine the best approach to
-              achieve those objectives/results. Clear expectations are set, and both
-              the team and I are held accountable for meeting them.
+              Once the team is in place, my role becomes that of a navigator, providing clear direction by defining
+              objectives and key results. I allow the team the flexibility to determine the best approach to achieve
+              those objectives/results. Clear expectations are set, and both the team and I are held accountable for
+              meeting them.
             </p>
             <p class="specializing-in-ux">&nbsp;</p>
             <p class="specializing-in-ux">
-              To establish a culture of scalable innovation, I firmly believe in
-              delegating decision-making and accountability to the furthest extent
-              possible within the team. This approach fosters a collective of
-              leaders rather than followers, empowering every team member to
-              contribute and take ownership of their responsibilities.
+              To establish a culture of scalable innovation, I firmly believe in delegating decision-making and
+              accountability to the furthest extent possible within the team. This approach fosters a collective of
+              leaders rather than followers, empowering every team member to contribute and take ownership of their
+              responsibilities.
             </p>
             <p class="specializing-in-ux">&nbsp;</p>
           </div>
@@ -284,7 +274,7 @@
     var mlLogo1Image = document.getElementById("mlLogo1Image");
     if (mlLogo1Image) {
       mlLogo1Image.addEventListener("click", function (e) {
-         window.location.href = "./index.html";
+        window.location.href = "./index.html";
       });
     }
 
